--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -58,12 +58,13 @@
                                             [partialData]="checkIfPartialDataPresent(kpi)">
                                             <ng-container *ngIf="!noTabAccess else noDataAccess">
                                                 <ng-container *ngIf="kpi?.kpiDetail?.chartType; else showTable">
+
                                                     <div [ngSwitch]="kpi?.kpiDetail?.chartType">
                                                         <ng-container *ngIf="!kpiLoader.has(kpi?.kpiId)">
                                                             <ng-container *ngIf="!(showChart === 'table')">
+
                                                                 <ng-container *ngSwitchCase="'stackedColumn'">
-                                                                    <ng-container
-                                                                        *ngIf="checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-groupstackchart [legendType]="'normal'"
                                                                             [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                             [yCaption]="kpi?.kpiDetail?.yaxisLabel"
@@ -76,8 +77,7 @@
                                                                             [selectedtype]="selectedtype"
                                                                             [isAggregationStacks]="(kpi?.kpiDetail?.isAggregationStacks === false) ? false : true"></app-groupstackchart>
                                                                     </ng-container>
-                                                                    <ng-container
-                                                                        *ngIf="!checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
@@ -92,8 +92,7 @@
                                                                     [showMarkerColumnNumber]="0"></app-table>
 
                                                                 <ng-container *ngSwitchCase="'line'">
-                                                                    <ng-container
-                                                                        *ngIf="checkIfDataPresent(kpi)">                                                                        
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-multiline-v2
                                                                             [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
                                                                             [unit]="kpi?.kpiDetail?.kpiUnit"
@@ -108,8 +107,7 @@
                                                                             [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG">
                                                                         </app-multiline-v2>
                                                                     </ng-container>
-                                                                    <ng-container
-                                                                        *ngIf="!checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
@@ -127,36 +125,58 @@
                                                                     [selectedtype]="selectedtype"
                                                                     [viewType]="showChart">
                                                                 </app-multiline-style-v2>
-                                                                <app-grouped-column-plus-line-chart-v2
-                                                                    *ngSwitchCase="'grouped_column_plus_line'"
-                                                                    [data]="kpiChartData[kpi?.kpiId]" [lineChart]="true"
-                                                                    [unit]="kpi?.kpiDetail?.kpiUnit"
-                                                                    [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
-                                                                    [yCaption]="kpi?.kpiDetail?.yaxisLabel"
-                                                                    [color]="chartColorList[kpi?.kpiId]"
-                                                                    [barLegend]="kpi?.kpiDetail?.barLegend"
-                                                                    [lineLegend]="kpi?.kpiDetail?.lineLegend"
-                                                                    [selectedtype]="selectedtype" [viewType]="showChart"
-                                                                    [lowerThresholdBG]="kpi?.kpiDetail?.lowerThresholdBG"
-                                                                    [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG"
-                                                                    [board]="selectedTab">
-                                                                </app-grouped-column-plus-line-chart-v2>
-                                                                <app-bar-with-y-axis-group
-                                                                    *ngSwitchCase="'bar-with-y-axis-group'"
-                                                                    [data]="kpiChartData[kpi?.kpiId]" [lineChart]="true"
-                                                                    [unit]="kpi?.kpiDetail?.kpiUnit"
-                                                                    [thresholdValue]="kpi?.kpiDetail?.thresholdValue"
-                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
-                                                                    [yCaption]="kpi?.kpiDetail?.yaxisLabel"
-                                                                    [color]="chartColorList[kpi?.kpiId]"
-                                                                    [barLegend]="kpi?.kpiDetail?.barLegend"
-                                                                    [lineLegend]="kpi?.kpiDetail?.lineLegend"
-                                                                    [selectedtype]="selectedtype" [viewType]="showChart"
-                                                                    [lowerThresholdBG]="kpi?.kpiDetail?.lowerThresholdBG"
-                                                                    [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG"
-                                                                    [yAxisOrder]="kpi?.kpiDetail?.yaxisOrder">
-                                                                </app-bar-with-y-axis-group>
+
+                                                                <ng-container *ngSwitchCase="'grouped_column_plus_line'">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
+                                                                        <app-grouped-column-plus-line-chart-v2
+                                                                            [data]="kpiChartData[kpi?.kpiId]"
+                                                                            [lineChart]="true"
+                                                                            [unit]="kpi?.kpiDetail?.kpiUnit"
+                                                                            [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
+                                                                            [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
+                                                                            [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                                                            [color]="chartColorList[kpi?.kpiId]"
+                                                                            [barLegend]="kpi?.kpiDetail?.barLegend"
+                                                                            [lineLegend]="kpi?.kpiDetail?.lineLegend"
+                                                                            [selectedtype]="selectedtype"
+                                                                            [viewType]="showChart"
+                                                                            [lowerThresholdBG]="kpi?.kpiDetail?.lowerThresholdBG"
+                                                                            [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG"
+                                                                            [board]="selectedTab">
+                                                                        </app-grouped-column-plus-line-chart-v2>
+                                                                    </ng-container>
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
+                                                                        <ng-container
+                                                                            *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
+                                                                        </ng-container>
+                                                                    </ng-container>
+                                                                </ng-container>
+
+                                                                <ng-container *ngSwitchCase="'bar-with-y-axis-group'">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
+                                                                        <app-bar-with-y-axis-group
+                                                                            [data]="kpiChartData[kpi?.kpiId]"
+                                                                            [lineChart]="true"
+                                                                            [unit]="kpi?.kpiDetail?.kpiUnit"
+                                                                            [thresholdValue]="kpi?.kpiDetail?.thresholdValue"
+                                                                            [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
+                                                                            [yCaption]="kpi?.kpiDetail?.yaxisLabel"
+                                                                            [color]="chartColorList[kpi?.kpiId]"
+                                                                            [barLegend]="kpi?.kpiDetail?.barLegend"
+                                                                            [lineLegend]="kpi?.kpiDetail?.lineLegend"
+                                                                            [selectedtype]="selectedtype"
+                                                                            [viewType]="showChart"
+                                                                            [lowerThresholdBG]="kpi?.kpiDetail?.lowerThresholdBG"
+                                                                            [upperThresholdBG]="kpi?.kpiDetail?.upperThresholdBG"
+                                                                            [yAxisOrder]="kpi?.kpiDetail?.yaxisOrder">
+                                                                        </app-bar-with-y-axis-group>
+                                                                    </ng-container>
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
+                                                                        <ng-container
+                                                                            *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
+                                                                        </ng-container>
+                                                                    </ng-container>
+                                                                </ng-container>
 
                                                                 <ng-container
                                                                     *ngSwitchCase="'CumulativeMultilineChart'">
@@ -175,8 +195,7 @@
 
                                                                 <ng-container
                                                                     *ngSwitchCase="'horizontalPercentBarChart'">
-                                                                    <ng-container
-                                                                        *ngIf="checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-horizontal-percent-bar-chartv2
                                                                             [kpiId]="kpi?.kpiId"
                                                                             [kpiWidth]="kpi?.kpiDetail?.kpiWidth"
@@ -184,21 +203,18 @@
                                                                             [activeTab]="activeIndex">
                                                                         </app-horizontal-percent-bar-chartv2>
                                                                     </ng-container>
-                                                                    <ng-container
-                                                                        *ngIf="!checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi}">
                                                                         </ng-container>
                                                                     </ng-container>
                                                                 </ng-container>
                                                                 <ng-container *ngSwitchCase="'pieChart'">
-                                                                    <ng-container
-                                                                        *ngIf="checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-piechart
                                                                             [data]="kpiChartData[kpi?.kpiId]"></app-piechart>
                                                                     </ng-container>
-                                                                    <ng-container
-                                                                        *ngIf="!checkIfDataPresent(kpi)">
+                                                                    <ng-container *ngIf="!checkIfDataPresent(kpi)">
                                                                         <ng-container
                                                                             *ngTemplateOutlet="partialData; context:  { $implicit: kpi }">
                                                                         </ng-container>
@@ -304,8 +320,7 @@
                                         </div>
                                     </ng-template>
                                     <ng-template #partialData let-data>
-                                        <div class="min-ht"
-                                            *ngIf="checkIfPartialDataPresent(data); else noDataAccess;">
+                                        <div class="min-ht" *ngIf="checkIfPartialDataPresent(data); else noDataAccess;">
                                             <div class="p-w-100  p-d-flex p-justify-center">
                                                 <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
                                             </div>
@@ -322,7 +337,7 @@
                                                 <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
                                             </div>
                                             <div class="p-w-100">
-                                                <h4 class="p-text-center">No Data Available.</h4>
+                                                <h4 class="p-text-center">No Data Available.123</h4>
                                             </div>
                                         </div>
                                     </ng-template>
