Spinnner on Blocked UI

--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -161,4 +161,6 @@
   </p-footer>
 </p-dialog>
 
-<p-blockUI [blocked]="blockUI"></p-blockUI>
+<p-blockUI [blocked]="blockUI">
+  <i class="pi pi-spin pi-spinner" style="font-size: 3rem"></i>
+</p-blockUI>
