--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -25,7 +25,7 @@
                 [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [optionLabel]="'nodeName'"
                 [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
                 [(ngModel)]="selectedFilters[i]" [options]="filterData[i]"
-                (onChange)="applyAdditionalFilter($event, i + 1)">
+                (onChange)="onDropDownChange($event, i + 1)">
             </p-dropdown>
             <label class="floating-label" [for]="'singleselectFilter_' + i">Select {{ config.defaultLevel.labelName }}</label>
         </span>
