--- a/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
@@ -4,7 +4,7 @@
             placeholder="Select {{ parentFilterConfig['name'] }}"
             [style]="{'width':'280px', 'max-width': '100%', 'height': '40px'}"
             [panelStyle]="{ 'min-width': 'min(100vw, 250px)' }" 
-            (onChange)="handleSelectedLevelChange(true)" [appendTo]="parentFilterDiv">
+            (onChange)="onDropdownChange($event)" [appendTo]="parentFilterDiv">
         </p-dropdown>
         <label class="floating-label" for="singleselectParentFilter">Select {{ parentFilterConfig['labelName']
             }}</label>
