--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -287,6 +287,7 @@
   align-items: center;
   border: 1px solid #D5DBE1;
   border-radius: 6px;
+  width: 250px;
 }
 
 :host ::ng-deep .p-dropdown .p-inputtext,
