--- a/UI/src/app/dashboard/iteration/iteration.component.html
+++ b/UI/src/app/dashboard/iteration/iteration.component.html
@@ -526,7 +526,7 @@
       <div class="export-button">
         <button *ngIf="modalDetails['tableValues'].length > 0" pButton pRipple label="Save" class="p-p-2 p-mr-2"
           (click)="saveTableColumnOrder()"></button>
-        <button *ngIf="modalDetails['tableValues'].length > 0" pButton pRipple label="Export"
+        <button *ngIf="modalDetails['tableValues'].length > 0" pButton pRipple label="Export View"
           class="p-button-secondary p-p-2 p-mr-2" (click)="generateExcel('filtered')"></button>
         <button *ngIf="modalDetails['tableValues'].length > 0" pButton pRipple label="Export All"
           class="p-button-secondary p-p-2 p-mr-2" (click)="generateExcel('all')"></button>
