Fix the unit, job name, week columns in Unit Test Coverage , Sonar code quality

--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
@@ -16,133 +16,135 @@
  *
  ******************************************************************************/
 
+:host ::ng-deep .p-multiselect-item {
+  overflow: initial;
+}
 
 .z-index-10 {
-    z-index: 10;
+  z-index: 10;
 }
 
 #cycle-time-priority-days .bs-wizard-dot {
-    top: 19px !important;
+  top: 19px !important;
 }
 
 #cycle-time-priority-days .progress {
-    height: 18px !important;
+  height: 18px !important;
 }
 
 .Exec-Scrum-Checkins {
-    z-index: 9;
+  z-index: 9;
 }
 
 .no-projects {
-    height: calc(100vh - 138px);
-    margin: 20px;
-    border-radius: 7px;
-    background-color: white;
+  height: calc(100vh - 138px);
+  margin: 20px;
+  border-radius: 7px;
+  background-color: white;
 }
 
 .no-projects h2 {
-    color: var(--color-black);
+  color: var(--color-black);
 }
 
 .kpi-card-container {
-    scroll-snap-type: both mandatory;
+  scroll-snap-type: both mandatory;
 }
 
 .tabs-container {
-    display: flex;
-    padding: 0 0.5rem;
-    margin-left: 0.5rem;
-    margin-top: 0.5rem;
+  display: flex;
+  padding: 0 0.5rem;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .tab {
-    background-color: #fff;
-    border: 1px solid #D5DBE1;
-    display: inline-block;
-    font-size: 12px;
-    padding: 0 8px 0 8px;
-    cursor: pointer;
-    height: 33px;
-    line-height: 33px;
+  background-color: #fff;
+  border: 1px solid #d5dbe1;
+  display: inline-block;
+  font-size: 12px;
+  padding: 0 8px 0 8px;
+  cursor: pointer;
+  height: 33px;
+  line-height: 33px;
 }
 
 .tab:first-child {
-    border-top-left-radius: 5px;
-    border-right: none;
+  border-top-left-radius: 5px;
+  border-right: none;
 }
 
 .tab:last-child {
-    border-top-right-radius: 5px;
-    border-left: none;
+  border-top-right-radius: 5px;
+  border-left: none;
 }
 
 .tab.is-selected {
-    border-bottom: 2px solid #0B4BC8;
-    font-weight: bold;
+  border-bottom: 2px solid #0b4bc8;
+  font-weight: bold;
 }
 
-
 .text-data {
-    font-size: 1.5rem;
-    color: var(--color-secondary-blue);
-    margin: 0;
+  font-size: 1.5rem;
+  color: var(--color-secondary-blue);
+  margin: 0;
 }
 
 .text-label {
-    color: var(--color-cyan-blue);
-    font-size: 1.1rem;
-    margin: 0;
+  color: var(--color-cyan-blue);
+  font-size: 1.1rem;
+  margin: 0;
 }
 
 .text-time {
-    color: var(--color-red);
+  color: var(--color-red);
 }
-.text-data .unit{
-    font-size: 1.5rem;
+.text-data .unit {
+  font-size: 1.5rem;
 }
-.btn-arrow-down{
-    color: var(--color-black);
-    width: .8rem;
-    cursor: pointer;
+.btn-arrow-down {
+  color: var(--color-black);
+  width: 0.8rem;
+  cursor: pointer;
 }
-.card-type-1{
-    position: relative;
-}
-
-.text-blue{
-    color: var(--color-secondary-blue);
-    text-decoration: underline;
+.card-type-1 {
+  position: relative;
 }
 
-.p-h-100{
-    height: 100%;
+.text-blue {
+  color: var(--color-secondary-blue);
+  text-decoration: underline;
 }
 
-.kpi-content-container{
-    border-right: 1px solid #c0c0c0;
+.p-h-100 {
+  height: 100%;
 }
 
-:host::ng-deep .p-dialog{
-    width: auto !important;
-    max-width: 90vw !important;
-    min-width: 544px;
+.kpi-content-container {
+  border-right: 1px solid #c0c0c0;
 }
 
-:host ::ng-deep.p-dialog-header-icons{
-    top: -8px;
-    right: -8px;
-    border-radius: 2px;
-    background-color: black;
-    border: none;
-    padding: 5px;
+:host::ng-deep .p-dialog {
+  width: auto !important;
+  max-width: 90vw !important;
+  min-width: 544px;
+}
+
+:host ::ng-deep.p-dialog-header-icons {
+  top: -8px;
+  right: -8px;
+  border-radius: 2px;
+  background-color: black;
+  border: none;
+  padding: 5px;
 }
 
 :host ::ng-deep .p-dialog-header-close-icon {
-    color: white;
-  }
+  color: white;
+}
 
-.export-button{
-    position: absolute;
-    right: 10px;
-    top: 14px;
+.export-button {
+  position: absolute;
+  right: 10px;
+  top: 14px;
 }
