overlap issue of iterration Burnup as part of fixthon

--- a/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
+++ b/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
@@ -49,6 +49,8 @@
     justify-content: center;
     margin-bottom: 1rem;
     color: #437495;
+    width: max-content;
+    transform: translateX(-16px);
 }
 
 :host ::ng-deep.y-caption span{
